--- a/compiler-plugin/src/main/resources/templates/controller.java.vm
+++ b/compiler-plugin/src/main/resources/templates/controller.java.vm
@@ -92,7 +92,7 @@ public class ${table.controllerName} {
 		JSONObject params = requestMessage(getRequest());
 		try {
 		    // 返回信息
-			write(this.i${entity}Service.get${entity}(params.getInteger(FIELD_ID)), getResponse());
+			write(this.i${entity}Service.get${entity}(params.getString(FIELD_ID)), getResponse());
 		} catch (Exception e) {
 			logger.error("$!{table.comment}详情：{}",e.getMessage());
 		    //系统异常
@@ -158,7 +158,7 @@ public class ${table.controllerName} {
 		JSONObject params = requestMessage(getRequest());
 		try {
 		    // 返回信息
-			write(this.i${entity}Service.remove${entity}(params.getInteger(FIELD_ID)), getResponse());
+			write(this.i${entity}Service.remove${entity}(params.getString(FIELD_ID)), getResponse());
 		} catch (Exception e) {
 			logger.error("$!{table.comment}删除：{}",e.getMessage());
 		    //系统异常
